# AuctionAlgorithmCPP

./: .Matrix.java.swp  .auction.cpp.swp  .clang-format  .gitignore  CMakeLists.txt  Matrix.java  README.md  auction.cpp  justfile  makefile
.github/workflows/: ci.yml  pages.yml
apps/: auction_cli.cpp
cpp/: auction  auction.cpp
docs/: BUGS.md
evals/: README.md  pyproject.toml
evals/src/auction_evals/: __init__.py  bench.py  cli.py  generators.py  native.py
evals/tests/: test_cli_e2e.py  test_native.py  test_optimality.py  test_properties.py
include/auction/: auction.hpp  problem.hpp
java/: auction.java
legacy/: auction_original.cpp
scala/: build.sbt  hello.scala  plots.script  runTimesInit.txt
scala/src/com/evan/auctionalgorithm/: Driver.scala
scala/src/main/scala-2.11/com/evan/auctionalgorithm/: AssignmentProblem.scala  Driver.scala  Test.scala
site/: app.js  index.html  styles.css
site/wasm/: auction.js  auction.wasm
src/: auction.cpp  problem.cpp
testfiles/: ProblemMatrix_02.txt  issue2.txt  test.txt  test2.txt
tests/: test_auction.cpp  test_problem.cpp
